# fpl-intelligence

./: .gitignore  .importlinter  .pre-commit-config.yaml  AUDIT.md  CONTEXT.md  Makefile  README.md  main.py  pyproject.toml  validation.py
.claude/: settings.local.json
.github/workflows/: ci.yml
analysis/: player_gameweek_v1.py
analysis/notebooks/: 00_spine_validation.ipynb  02_state_descriptive_analysis.ipynb  03_stability_analysis.ipynb
analysis/source/: players.py
analysis/staging/: __init__.py
archive/: DOC_MIGRATION_PLAN.md  EXECUTION_QUEUE.md  IMPLEMENTATION_BACKLOG.md  IMPLEMENTATION_ROADMAP.md  STABILIZATION_PLAN.md  SYSTEM_CONTEXT.md  architecture-boundaries.md  evaluation-framework.md  repository-alignment-report.md  research-program.md
archive/stabilization/: OVERVIEW.md  PHASE11_STATUS.md  RISKS.md  STABILIZATION_EXECUTION_PLAN.md
core/: __init__.py
core/governance/: __init__.py  loader.py  promotion.py  schema.py  semantics.py  validation.py
core/relationships/: __init__.py  association.py  geometry.py  panel.py  tail.py
core/signals/: __init__.py  population.py  redundancy.py  scoping.py  stability.py
dal/: DAL_CONTRACT.md  README.md  __init__.py  access.py  config.py  contracts.py  exceptions.py  pipeline.py  reproducibility.py
dal/curated/: __init__.py  contracts.py  gameweek_context.py  player_gameweek_spine.py
dal/fct/: __init__.py  fct_contracts.py  fct_gameweek_context.py  fct_player_gameweek.py
dal/feat/: __init__.py  feat_contracts.py  feat_player_gameweek.py  feat_schema.py
dal/mart/: __init__.py  mart_access.py  mart_analytical.py  mart_schema.py
dal/prepared/: __init__.py  analytical_dataset.py
dal/staging/: __init__.py  entities.py  schema.py  stg_entities.py  stg_freshness.py  stg_schema.py  stg_transformer.py  transformer.py
dal/state/: STATE_CONTRACT.md  __init__.py  contracts.py  opponent_context.py  player_gameweek_state.py
dal/validation/: __init__.py  completeness.py  contracts.py  grain.py  invariants.py  joins.py  nulls.py  semantics.py
docs/: DB_SCHEMA.md  IMPLEMENTATION_ROADMAP.md  analysis-strategy-review.md  implementation-plan.md  model-redesign-coverage-metric-slice.md  model-redesign-godfile-deletion-slice.md  model-redesign-phase4-calibration-results.md  model-redesign-phase4-calibration-slice.md  model-redesign-position-specification-results.md  model-redesign-pplay-blanktail-slice.md  model-redesign-simulate-slice.md  model-redesign-spec.md  model-redesign-team-goals-against-slice.md  navigation-map.md  predictive-layer-plan.md  predictive-phase1-design.md  predictive-phase2-design.md  predictive-plan-assumptions-audit.md  registry-governance.md  research-lifecycle.md  signal-promotion-states.md  system-purpose.md
docs/adr/: 002-stack-definition.md  003-team-id-resolution.md  006-layer-architecture.md  007-bgw-team-semantics.md  008-dgw-aggregation-rules.md  009-first-cols-ordering.md  010-enforcement-contract.md  011-migration-phases.md  012-dal-design-rationale.md  012-pipeline-entry-point-separation.md  013-mart-access-interface.md
docs/architecture/: DAL_CONTRACT.md  DOWNSTREAM_DEPENDENCY_GOVERNANCE.md  adlc.md  analytical-architecture.md  decision-lifecycle.md  doc-drift.md  downstream-dependency-governance.md  explainability-model.md  intelligence-layer.md  layer-boundaries.md  operational-flow.md  platform-capabilities.md  platform-evaluation-2026.md  runtime-artifacts.md  runtime-execution.md  system-model.md  test-coverage.md  testing-strategy.md
docs/archive/: README.md  architecture-execution-plan.md  operational-convergence-plan.md  synth01-design.md
docs/assessments/: dal-boundary-assessment.md  phase-c-readiness-assessment.md  research-cleanup-readiness-assessment.md  research-layer-cleanup-implementation-report.md
docs/audit/: AUDIT_PROMPT.md  analytical_architecture_audit_2026-06-01.md  intelligence_to_serve_rename_plan_2026-06-04.md  research_layer_migration_blueprint_2026-06-03.md  research_migration_phase5_2026-06-03.md  research_target_architecture_2026-06-03.md  signals_decomposition_migration_plan_2026-06-04.md  signals_governance_consolidation_plan_2026-06-04.md  spine_traversal_refactor_plan_2026-06-03.md
docs/audits/: PHASE_AUDIT_KIT.md  README.md  phase1-audit.md
docs/decisions/: 001-spearman-as-evaluation-metric.md  001_minutes_certainty.md  002-additive-weighted-scoring.md  README.md  (+23 more)
domain/: fpl_scoring.py  fpl_signals.py  registry_signals.py  signal_layers.py
examples/: quickstart.py
intelligence/: __init__.py  _base.py  availability.py  captain.py  fixtures.py  intelligence_contracts.py  provenance.py  transfers.py  value.py  weight_registry.py  weight_registry.yaml
model/: compose.py  simulate.py
population/: populations.py
registry/: sections.py
research/: STRATEGY.md
serve/: __init__.py  availability.py  captain.py  fixtures.py  provenance.py  transfers.py  value.py  weight_registry.py  weight_registry.yaml
studies/: STRATEGY.md
tests/: _synthetic_mart.py  conftest.py  test_briefing_models.py  test_composite_key_migration.py  test_composition_moderation.py  test_curated_spine.py  test_curated_state_boundary.py  test_dal_architecture.py  test_dal_bgw.py  test_dal_bgw_dgw.py  test_dal_completeness.py  test_dal_dgw.py  test_dal_grain.py  test_dal_invariants.py  test_dal_joins.py  test_dal_nulls.py  test_dal_prepared_dataset.py  test_db_integration.py  test_domain_fpl_scoring.py  test_domain_fpl_scoring_verification.py  test_domain_fpl_signals.py  test_domain_position_scoring.py  test_downstream_governance.py  test_error_codes.py  test_eval.py  test_evaluation_captain.py  test_evaluation_core.py  test_evaluation_features.py  test_evaluation_metadata.py  test_evaluation_transfers.py  test_evidence_record.py  test_evidence_verdict_freeze.py  test_feat_schema.py  test_finding_key.py  test_fixture_coverage.py  test_generate_evaluation_metadata.py  test_generate_synth01_decisions.py  test_generated_banner_invariant.py  test_governance_compliance.py  test_integrated.py  (+93 more)
weekly/: __init__.py  db.py  insights.py  runner.py  snapshots.py
(+518 files in other folders)
