[project]
name = "fpl-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.26.0",
    "nbformat>=5.10.4",
    "numpy>=1.26.0",
    "pandas>=2.3.3",
    "pandera>=0.19",
    "pydantic>=2.13.1",
    "pyyaml>=6.0.3",
    "scipy>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
dev-mode-dirs = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a live database (deselect with '-m not integration')",
    "unit: marks tests that run without any external dependencies",
]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=9.0.3",
]
