[project]
name = "fpl-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.26.0",
    "nbformat>=5.10.4",
    "numpy>=1.26.0",
    "pandas>=2.3.3",
    "pyarrow>=14.0.0",
    "pandera>=0.19",
    "pydantic>=2.13.1",
    "pyyaml>=6.0.3",
    "scipy>=1.12.0",
    "matplotlib>=3.10.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
dev-mode-dirs = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a live database (deselect with '-m not integration')",
    "unit: marks tests that run without any external dependencies",
]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=9.0.3",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["studies/", "archive/", "examples/", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF"]
# E712 noqa suppressions remaining in studies/ are excluded via the top-level exclude above.
# F401 in weekly_report_runner is handled by removing the dead imports directly.

[tool.ruff.lint.per-file-ignores]
# SQL fixture data rows use fixed-width numeric alignment that cannot wrap to 120 chars.
"tests/fixtures/create_test_db.py" = ["E501"]
# Analytical study script (moved from the ruff-excluded studies/ tree): embeds verbatim
# evidence-rationale strings and `position × lens` group labels that must not be wrapped
# or transliterated. Matches the studies/ exclusion policy without opening all of model/.
"model/assemble/composition_study.py" = ["E501", "RUF001", "RUF002", "RUF003"]
# Foundation EDA helpers (moved from the ruff-excluded studies/ tree). Each carries
# intentional analytical idioms ruff cannot distinguish from defects:
#   RUF001/RUF002 — `position × lens` labels + `GW a–b` en-dash ranges in emitted text;
#   RUF022        — `__all__` deliberately grouped by source module, not globally sorted;
#   F401          — re-export shim: imports geometry/association/correlation symbols solely to
#                   re-expose them for notebook + test consumption (see test_relationship_geometry).
# (pandas `df[df["col"] == True]` boolean-mask filtering is marked inline with `# noqa: E712`.)
"research/foundation/joint/_joint_helpers.py" = ["RUF001", "F401"]
"research/foundation/signals/_signal_distribution_helpers.py" = ["RUF001", "RUF022"]
"research/foundation/scope/population.py" = ["RUF002"]
# Lens validate study (moved from studies/lenses/): one-line `Mode · Stage · Status` ADLC
# header lists every approved signal/position and exceeds 120 chars by design.
"research/families/market/validate/study.py" = ["E501"]
# Family explore studies (moved from studies/experiments/): docstrings/comments carry
# intentional `position × lens` labels, `GW a–b` en-dash ranges, and `−` minus signs.
"research/families/form/explore/minutes_stability_study.py" = ["RUF002", "RUF003"]
"research/families/form/explore/rolling_xgi_study.py" = ["RUF002"]

[tool.mypy]
python_version = "3.12"
# Scope: production modules only. studies/, archive/, examples/ intentionally excluded.
files = ["dal", "signals", "intelligence", "domain", "population"]
explicit_package_bases = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
# disallow_any_generics will be added in Day 2 after bare-dict cleanup is verified clean.
